--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,31 +34,43 @@
     />
 
   <Button
+    android:id="@+id/button3"
+    android:layout_width="wrap_content"
+    android:layout_height="46dp"
+    android:layout_marginTop="164dp"
+    android:text="addGraph"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.35"
+    app:layout_constraintStart_toEndOf="@+id/button2"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+  <Button
     android:id="@+id/button1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="136dp"
+    android:layout_marginTop="128dp"
     android:text="Button1"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/message"
     />
-
   <Button
     android:id="@+id/button2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="116dp"
+    android:layout_marginStart="36dp"
+    android:layout_marginTop="164dp"
     android:text="addDegit"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toEndOf="@+id/button1"
+    app:layout_constraintTop_toTopOf="parent"
     />
-
-  <Button
-    android:id="@+id/button3"
-    android:layout_width="wrap_content"
-    android:layout_height="46dp"
-    android:layout_marginTop="148dp"
-    android:text="addGraph"
-    app:layout_constraintTop_toBottomOf="@+id/button2"
-    tools:layout_editor_absoluteX="211dp"
+  <RelativeLayout
+    android:id="@+id/fragment_area"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toTopOf="@+id/navigation"
+    app:layout_constraintTop_toBottomOf="@+id/button3"
     />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
